# goit-pythonweb-hw-12

./: .env  .env.example  README.md  alembic.ini  connect.py  docker-compose.yaml  main.py  models.py  my_select.py  pyproject.toml  requirements.txt  seed.py
alembic/: env.py
alembic/versions/: 51ab765a942e_add_user.py  5202945c787d_add_user_roles.py  92dd7ecd0faa_init.py  ac6aa0c0dc4d_add_to_model_user_filed_confirmed.py
conf/: config.py
database/: db.py  redis.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  main.rst  modules.rst
migrations/: env.py
migrations/versions/: 99e238649473_initial_migration.py
models/: contacts.py  models.py
repository/: contacts.py  users.py
schemas/: contact.py  user.py
services/: auth.py  contact.py  email.py  password_reset.py  user.py
source/: modules.rst
tests/: conftest.py  test_auth.py  test_contacts.py  test_contacts_repository.py  test_models.py  test_user.py  test_users_repository.py
